--- a/package.json
+++ b/package.json
@@ -4,14 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "start": "node server.js",
   },
-  "keywords": [
-    "mern",
-    "chat-app"
-  ],
   "author": "Saddala Vivek",
   "license": "ISC",
   "dependencies": {
